Fixed layout of upcoming events on iPhone

--- a/shared/components/FutureEvents/index.scss
+++ b/shared/components/FutureEvents/index.scss
@@ -11,7 +11,10 @@
   &__events-container {
     padding-bottom: 20px;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    &-event {
+      width: 100%;
+    }
   }
 }
 
@@ -20,6 +23,7 @@
   border-right: none;
   border-top: $dash-border;
   min-width: 33.33%;
+  height: 100%;
   padding: 20px;
   flex: 1;
 
@@ -90,6 +94,12 @@
 
     &:nth-child(2) {
       border-right: none;
+    }
+  }
+
+  .FutureEvents {
+    &__events-container {
+     flex-wrap: wrap;
     }
   }
 }
